@@ -131,6 +131,7 @@ wxMSW:
 - Fix display enumeration under WinCE (Vince Harron).
 - Fix best size calculation for wxNotebook with multiple rows (Alex McCarthy).
 - Correct coordinates of wxDropFilesEvent (Dmitriy Maksimov).
+- Fix handling of abandoned mutexes in wxMutex (David Heffernan).
 
 wxGTK:
 
